more about km 2016

--- a/views/kmtg16.html
+++ b/views/kmtg16.html
@@ -19,6 +19,29 @@
     </div>
 </div>
 
+
+
+<div class="row">
+    <div class="col-sm-6">
+        <div class="thumbnail">
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/QsHVXJSqVUM" frameborder="0" allowfullscreen></iframe>
+
+            <p><strong>Larry Hallock - Part 1</strong></p>
+            <p></p>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="thumbnail">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/cgWXuyVbbUc" frameborder="0" allowfullscreen></iframe>
+            <p><strong>Larry Hallock - Part 2</strong></p>
+            <p></p>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="row">
     <div class="col-sm-6">
         <div class="thumbnail">
@@ -54,8 +77,6 @@
         </div>
     </div>
 </div>
-
-
 
 
 </div>
