made updates and copied some content

--- a/views/elections2017.html
+++ b/views/elections2017.html
@@ -10,7 +10,7 @@
     </p>
 
       <div class="row">
-          <div class="col-sm-8">
+          <div class="col-sm-6">
               <div class="container-fluid text-center">
 
                   <!-- Container (Pricing Section) -->
@@ -120,17 +120,19 @@
                   </div>
               </div>
 
-            </div>
-               <div class="col-sm-4">
+          </div>
+          <div class="col-sm-4">
               <div class="container" style="text-align: left">
+                <h4> Get Involved! </h4>
                 <p>
                   If you are willing to run for any of the open positions:
-                  <br />
+                </p>  
+                   <br />
                   <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" target="_blank" class="btn btn-success btn-lg">
                   Apply Here
                   </a>
                   
-                </p>    
+                 
               </div>
           </div>
           </div>
