--- a/views/getinvolved.html
+++ b/views/getinvolved.html
@@ -64,7 +64,7 @@ Getting Involved
 
 
     <div class="col-sm-4">
-        <h4> Coordinator Vacancies</h4>
+        <h4> Regional Coordinator Vacancies</h4>
         <ul>
             <li>NYC
             </li>
