--- a/views/kmtg16.html
+++ b/views/kmtg16.html
@@ -5,15 +5,61 @@
 <div class="row">
     <div class="col-sm-6">
         <div class="thumbnail">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JVPi4jRP1XU" frameborder="0" allowfullscreen></iframe>
-            <p><strong>Mitch Tyner - Opening Night</strong></p>
-            <p></p>
+             <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/JVPi4jRP1XU" frameborder="0" allowfullscreen></iframe>
+             </div>
+                <p><strong>Mitch Tyner - Opening Night</strong></p>
+                <p></p>
+             
         </div>
     </div>
     <div class="col-sm-6">
         <div class="thumbnail">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/4hRDJjFcR7M" frameborder="0" allowfullscreen></iframe>
-            <p><strong>Ann Roda</strong></p>
+             <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/4hRDJjFcR7M" frameborder="0" allowfullscreen></iframe>
+             </div>
+                <p><strong>Ann Roda</strong></p>
+                <p></p>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="row">
+    <div class="col-sm-6">
+        <div class="thumbnail">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/QsHVXJSqVUM" frameborder="0" allowfullscreen></iframe>
+            </div>
+                <p><strong>Larry Hallock - Part 1</strong></p>
+                <p></p>
+       </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="thumbnail">
+             <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/cgWXuyVbbUc" frameborder="0" allowfullscreen></iframe>
+             </div>
+                <p><strong>Larry Hallock - Part 2</strong></p>
+                <p></p>
+       </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-6">
+        <div class="thumbnail"> <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/42FyxrruXSU" frameborder="0" allowfullscreen></iframe>
+        </div>
+            <p><strong>Ron Lawson - Some Kinship History</strong></p>
+            <p></p>
+        
+    </div>
+    <div class="col-sm-6">
+        <div class="thumbnail">
+
+            <p><strong></strong></p>
             <p></p>
         </div>
     </div>
@@ -24,39 +70,21 @@
 <div class="row">
     <div class="col-sm-6">
         <div class="thumbnail">
-
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/QsHVXJSqVUM" frameborder="0" allowfullscreen></iframe>
-
-            <p><strong>Larry Hallock - Part 1</strong></p>
-            <p></p>
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/SgWmZzGNrbo" frameborder="0" allowfullscreen></iframe>
+            </div>
+                <p><strong>Kinship in Concert</strong></p>
+                <p></p>
+           
         </div>
     </div>
     <div class="col-sm-6">
         <div class="thumbnail">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/cgWXuyVbbUc" frameborder="0" allowfullscreen></iframe>
-            <p><strong>Larry Hallock - Part 2</strong></p>
-            <p></p>
-        </div>
-    </div>
-</div>
-
-
-
-<div class="row">
-    <div class="col-sm-6">
-        <div class="thumbnail">
-
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/SgWmZzGNrbo" frameborder="0" allowfullscreen></iframe>
-            <p><strong>Kinship in Concert</strong></p>
-            <p></p>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="thumbnail">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/8PPioOwmJHM" frameborder="0" allowfullscreen></iframe>
+             <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/8PPioOwmJHM" frameborder="0" allowfullscreen></iframe>
+             </div>
             <p><strong>Olive Hemmings - Sabbath Speaker</strong></p>
             <p></p>
-        </div>
     </div>
 </div>
 
