added more content and pages

--- a/views/about.html
+++ b/views/about.html
@@ -1,4 +1,31 @@
 <div>
 
-<h5> About Kinship </h5>
+<h3> About Kinship </h3>
+
+
+<h4>Our Mission... </h4>
+<p>Seventh-day Adventist Kinship International provides a safe spiritual and social community to lesbian, gay, bisexual, transgender & intersex current and former Seventh-day Adventists around the world.
+ </p>
+
+<h4> Who We Are </h4>
+<p>Seventh-day Adventist Kinship is a diverse, worldwide community of individuals who have participated in the Adventist community and have felt ostracized by church leaders, administrators, or members because of their sexual orientation or gender variation, their support for family or friends, or their convictions about equality and justice. Kinship welcomes and encourages straight allies to join us in showing that God loves all His children equally and unconditionally and we can love unconditionally too.
+ </p>
+
+<h4>What Kinship Has Learned </h4>
+<p> Since we formed more than 30 years ago, we’ve come to know thousands of people around the world. We’ve learned from these people that gender, attraction, and love are not simplistic issues, and that each person needs to learn how to interact with others responsibly and with integrity. Kinship encourages and advocates for members’ freedom and responsibility to express themselves in ways they believe match the truth about themselves, their relationship with God, and their understanding of what God requires of them. Kinship provides a safe space for members to explore these questions, discuss research relevant to their situation, and live out the convictions they come to. We do not force members into specific conclusions about themselves or their relationships, and members respect one another’s views and privacy. Knowing that not every member is safe disclosing outside the organization, Kinship has a firm confidentiality policy to protect vulnerable members. Kinship also supports members’ decisions to be celibate or to form age-appropriate relationships; we’ve learned that these important and deeply personal decisions should not be mandated by anyone other than the individual(s) involved.
+</p>
+
+<h4> How You Can Get Involved </h4>
+<p>If you would like to help make a difference, encourage and learn with other people, and promote God's unconditional love for all His children, please join us as a member. If you would also like to support our work with members around the world with your resources or time, please contact us and we will coordinate the best opportunity for you.
+</p>
+
+
+<h4> What Kinship is Not</h4>
+<p>Seventh-day Adventist Kinship is not a church or new theological system. Many Kinship members still worship in local Adventist churches on every continent, despite the fact that some of them must be silent about who they really are. In addition, members who are Adventist Christians represent all facets of the church’s theological spectrum and have learned to have vigorous, mutually respectful discussions about their beliefs. Others are no longer associated with Adventism at all, but members respect each others’ conscience and conformity is not required. Kinship is also not a change or reparative ministry designed to pressure members into suppressing or reshaping their sexual orientation or gender identity. Instead, Kinship encourages members to form a healthy sense of self and harmoniously blend their identity, spirituality, and social relationships.
+ </p>
+
+
+
+
+
 </div>
