--- a/views/getinvolved.html
+++ b/views/getinvolved.html
@@ -64,6 +64,13 @@ Getting Involved
 
 
     <div class="col-sm-4">
+        <h4> Demographic Coordinator Vacancies </h4>
+        <ul>    
+            <li>Older Adults Coordinator</li>
+            <li>Transgender Coordinator</li>
+            <li>Family Coordinator</li>
+        </ul>
+
         <h4> Regional Coordinator Vacancies</h4>
         <ul>
             <li>NYC
