--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,27 @@
+
+  <style>
+  .bg-1 { 
+      background-color: #1abc9c; /* Green */
+      color: #ffffff;
+  }
+  </style>
+
+<div class="bg-1">
+  <div class="container">
+    <h3>Who We Are</h3>
+   
+    <p>
+        SDA Kinship International was created in 1976 to provide a safe community for 
+        LGBTIQA+ individuals with a Seventh-Day Adventist background. 
+        <a href="#/community">
+        Our community is diverse,</a> Learn how to join us.
+    </p>
+  </div>
+</div>
+
+
 <div>
+
 
     <div class="row">
         
