--- a/views/kmtg16.html
+++ b/views/kmtg16.html
@@ -49,25 +49,14 @@
 
 <div class="row">
     <div class="col-sm-6">
-        <div class="thumbnail"> <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/42FyxrruXSU" frameborder="0" allowfullscreen></iframe>
-        </div>
+        <div class="thumbnail"> 
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/42FyxrruXSU" frameborder="0" allowfullscreen></iframe>
+            </div>
             <p><strong>Ron Lawson - Some Kinship History</strong></p>
             <p></p>
-        
-    </div>
-    <div class="col-sm-6">
-        <div class="thumbnail">
-
-            <p><strong></strong></p>
-            <p></p>
         </div>
     </div>
-</div>
-
-
-
-<div class="row">
     <div class="col-sm-6">
         <div class="thumbnail">
             <div class="embed-responsive embed-responsive-16by9">
@@ -78,6 +67,9 @@
            
         </div>
     </div>
+</div>
+
+<div class="row">
     <div class="col-sm-6">
         <div class="thumbnail">
              <div class="embed-responsive embed-responsive-16by9">
@@ -85,26 +77,9 @@
              </div>
             <p><strong>Olive Hemmings - Sabbath Speaker</strong></p>
             <p></p>
-    </div>
-</div>
-
-
-<div class="row">
-    <div class="col-sm-6">
-        <div class="thumbnail">
-
-            <p><strong></strong></p>
-            <p></p>
         </div>
     </div>
-    <div class="col-sm-6">
-        <div class="thumbnail">
 
-            <p><strong></strong></p>
-            <p></p>
-        </div>
-    </div>
 </div>
-
 
 </div>
