--- a/views/welcomeTier2.html
+++ b/views/welcomeTier2.html
@@ -3,6 +3,11 @@
 
 
 <h4> Our Beliefs</h4>
+<p>
+    The message of SDA Kinship is different from traditional church’s views. Together with a growing number of Adventist pastors, scholars, teachers, and church members, we believe LGBTI individuals are wholly loved and accepted as they are by our Creator. This is not a message of mere convenience; it is a message well-studied and consistent with scripture. 
+    <br />
+    We are primarily Seventh-day Adventist lesbian, gay, bisexual, transgender, and intersex people, including many who were asked to leave the church or left because they felt condemned and unwelcome. Our membership also includes heterosexual Adventists, parents of LGBTIs, and others who are sympathetic to our concerns. No one who supports the mission of Kinship is excluded.We are naturally a diverse group with a wide range of spiritual experiences and stages of self-acceptance and reconciliation and expression.
+</p>
 <ul class="list-unstyled">
 <li> 
 <strong>
