--- a/views/membershipLevels.html
+++ b/views/membershipLevels.html
@@ -4,13 +4,28 @@
 
 
 
-<h5>
-    
-</h5>
+<h4>
+    Subscriber
+</h4>
+<ul>
+    <li>
+    </li>
+        <li>
+    </li>
+        <li>
+    </li>
+</ul>
 
-
-<h5>
-
-</h5>
+<h4>
+    Community
+</h4>
+<ul>
+    <li>
+    </li>
+        <li>
+    </li>
+        <li>
+    </li>
+</ul>
 
 </div>
