added countdown timer

--- a/views/kmtg17.html
+++ b/views/kmtg17.html
@@ -1,3 +1,27 @@
+<script>
+// set the date we're counting down to
+      var target_date = new Date('July, 06, 2017').getTime(); 
+      // variables for time units
+      var days, hours, minutes, seconds; 
+      // get tag element
+      var countdown = document.getElementById('countdown'); 
+      // update the tag with id "countdown" every 1 second
+      setInterval(function () 
+      {     // find the amount of "seconds" between now and target    
+            var current_date = new Date().getTime();    
+            var seconds_left = (target_date - current_date) / 1000;     
+            // do some time calculations    
+            days = parseInt(seconds_left / 86400);    
+            seconds_left = seconds_left % 86400;         
+            hours = parseInt(seconds_left / 3600);    
+            seconds_left = seconds_left % 3600;         
+            minutes = parseInt(seconds_left / 60);    
+            seconds = parseInt(seconds_left % 60);         
+            // format countdown string + set tag value    
+            countdown.innerHTML = '<span class="days">' + days +  ' <b>Days</b></span> <span class="hours">' + hours + ' <b>Hours</b></span> <span class="minutes">'    + minutes + ' <b>Minutes</b></span> <span class="seconds">' + seconds + ' <b>Seconds</b></span>';   
+      }, 1000);
+
+</script>
 <!-- Container (About Section) -->
 <div id="about" class="container-fluid">
 
@@ -11,6 +35,12 @@
           <p>
           This year Kampmeeting will be different in format from previous years, and the registration fees do not include meals and hotel accommodations. We want to make sure that everyone who wants to attend can afford to do so. Visit www.sdakinship.org for info on special discounts and more.
           </p>
+            
+            <div id="countdown">  
+            
+            </div>
+            
+            
       </div>
       <div class="col-sm-6">
         <img src="https://jmezetin.github.io/kmtg17/images/sdakkampmeetinglogo_900.jpg" class="img-responsive" />
